Update EA_JBoss_EAP_Logging.md